pascalscript.output
Grammar

    0 $accept: program $end

    1 program: program_declaration constant_declaration_list variable_declaration_list T_BEGIN statement_list T_END T_DOT

    2 program_declaration: T_PROGRAM T_IDENTIFIER T_SEMICOLON

    3 constant_declaration_list: constant_declaration
    4                          | constant_declaration_list constant_declaration

    5 constant_declaration: T_CONST T_IDENTIFIER T_EQUALS T_INTEGER_VALUE T_SEMICOLON

    6 variable_declaration_list: variable_declaration
    7                          | variable_declaration_list variable_declaration

    8 variable_declaration: T_VAR T_IDENTIFIER T_COLON T_INTEGER T_SEMICOLON

    9 statement_list: statement
   10               | statement_list statement

   11 statement: T_IDENTIFIER T_ASSIGN expression T_SEMICOLON
   12          | T_WRITELN T_LEFT_PARENTHESIS T_IDENTIFIER T_RIGHT_PARENTHESIS T_SEMICOLON

   13 expression: expression T_PLUS term
   14           | expression T_MINUS term
   15           | term

   16 term: term T_STAR factor
   17     | term T_SLASH factor
   18     | term T_DIV factor
   19     | term T_MOD factor
   20     | factor

   21 factor: T_LEFT_PARENTHESIS expression T_RIGHT_PARENTHESIS
   22       | T_MINUS factor
   23       | scalar

   24 scalar: T_INTEGER_VALUE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PLUS (258) 13
    T_MINUS (259) 14 22
    T_STAR (260) 16
    T_SLASH (261) 17
    T_DIV (262) 18
    T_MOD (263) 19
    T_ASSIGN (264) 11
    T_LEFT_PARENTHESIS (265) 12 21
    T_RIGHT_PARENTHESIS (266) 12 21
    T_COLON (267) 8
    T_SEMICOLON (268) 2 5 8 11 12
    T_DOT (269) 1
    T_EQUALS (270) 5
    T_PROGRAM (271) 2
    T_CONST (272) 5
    T_VAR (273) 8
    T_BEGIN (274) 1
    T_END (275) 1
    T_WRITELN (276) 12
    T_INTEGER (277) 8
    T_INTEGER_VALUE (278) 5 24
    T_IDENTIFIER (279) 2 5 8 11 12


Nonterminals, with rules where they appear

    $accept (25)
        on left: 0
    program (26)
        on left: 1
        on right: 0
    program_declaration (27)
        on left: 2
        on right: 1
    constant_declaration_list (28)
        on left: 3 4
        on right: 1 4
    constant_declaration (29)
        on left: 5
        on right: 3 4
    variable_declaration_list (30)
        on left: 6 7
        on right: 1 7
    variable_declaration (31)
        on left: 8
        on right: 6 7
    statement_list (32)
        on left: 9 10
        on right: 1 10
    statement (33)
        on left: 11 12
        on right: 9 10
    expression (34)
        on left: 13 14 15
        on right: 11 13 14 21
    term (35)
        on left: 16 17 18 19 20
        on right: 13 14 15 16 17 18 19
    factor (36)
        on left: 21 22 23
        on right: 16 17 18 19 20 22
    scalar (37)
        on left: 24
        on right: 23


State 0

    0 $accept: . program $end

    T_PROGRAM  shift, and go to state 1

    program              go to state 2
    program_declaration  go to state 3


State 1

    2 program_declaration: T_PROGRAM . T_IDENTIFIER T_SEMICOLON

    T_IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: program_declaration . constant_declaration_list variable_declaration_list T_BEGIN statement_list T_END T_DOT

    T_CONST  shift, and go to state 6

    constant_declaration_list  go to state 7
    constant_declaration       go to state 8


State 4

    2 program_declaration: T_PROGRAM T_IDENTIFIER . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 9


State 5

    0 $accept: program $end .

    $default  accept


State 6

    5 constant_declaration: T_CONST . T_IDENTIFIER T_EQUALS T_INTEGER_VALUE T_SEMICOLON

    T_IDENTIFIER  shift, and go to state 10


State 7

    1 program: program_declaration constant_declaration_list . variable_declaration_list T_BEGIN statement_list T_END T_DOT
    4 constant_declaration_list: constant_declaration_list . constant_declaration

    T_CONST  shift, and go to state 6
    T_VAR    shift, and go to state 11

    constant_declaration       go to state 12
    variable_declaration_list  go to state 13
    variable_declaration       go to state 14


State 8

    3 constant_declaration_list: constant_declaration .

    $default  reduce using rule 3 (constant_declaration_list)


State 9

    2 program_declaration: T_PROGRAM T_IDENTIFIER T_SEMICOLON .

    $default  reduce using rule 2 (program_declaration)


State 10

    5 constant_declaration: T_CONST T_IDENTIFIER . T_EQUALS T_INTEGER_VALUE T_SEMICOLON

    T_EQUALS  shift, and go to state 15


State 11

    8 variable_declaration: T_VAR . T_IDENTIFIER T_COLON T_INTEGER T_SEMICOLON

    T_IDENTIFIER  shift, and go to state 16


State 12

    4 constant_declaration_list: constant_declaration_list constant_declaration .

    $default  reduce using rule 4 (constant_declaration_list)


State 13

    1 program: program_declaration constant_declaration_list variable_declaration_list . T_BEGIN statement_list T_END T_DOT
    7 variable_declaration_list: variable_declaration_list . variable_declaration

    T_VAR    shift, and go to state 11
    T_BEGIN  shift, and go to state 17

    variable_declaration  go to state 18


State 14

    6 variable_declaration_list: variable_declaration .

    $default  reduce using rule 6 (variable_declaration_list)


State 15

    5 constant_declaration: T_CONST T_IDENTIFIER T_EQUALS . T_INTEGER_VALUE T_SEMICOLON

    T_INTEGER_VALUE  shift, and go to state 19


State 16

    8 variable_declaration: T_VAR T_IDENTIFIER . T_COLON T_INTEGER T_SEMICOLON

    T_COLON  shift, and go to state 20


State 17

    1 program: program_declaration constant_declaration_list variable_declaration_list T_BEGIN . statement_list T_END T_DOT

    T_WRITELN     shift, and go to state 21
    T_IDENTIFIER  shift, and go to state 22

    statement_list  go to state 23
    statement       go to state 24


State 18

    7 variable_declaration_list: variable_declaration_list variable_declaration .

    $default  reduce using rule 7 (variable_declaration_list)


State 19

    5 constant_declaration: T_CONST T_IDENTIFIER T_EQUALS T_INTEGER_VALUE . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 25


State 20

    8 variable_declaration: T_VAR T_IDENTIFIER T_COLON . T_INTEGER T_SEMICOLON

    T_INTEGER  shift, and go to state 26


State 21

   12 statement: T_WRITELN . T_LEFT_PARENTHESIS T_IDENTIFIER T_RIGHT_PARENTHESIS T_SEMICOLON

    T_LEFT_PARENTHESIS  shift, and go to state 27


State 22

   11 statement: T_IDENTIFIER . T_ASSIGN expression T_SEMICOLON

    T_ASSIGN  shift, and go to state 28


State 23

    1 program: program_declaration constant_declaration_list variable_declaration_list T_BEGIN statement_list . T_END T_DOT
   10 statement_list: statement_list . statement

    T_END         shift, and go to state 29
    T_WRITELN     shift, and go to state 21
    T_IDENTIFIER  shift, and go to state 22

    statement  go to state 30


State 24

    9 statement_list: statement .

    $default  reduce using rule 9 (statement_list)


State 25

    5 constant_declaration: T_CONST T_IDENTIFIER T_EQUALS T_INTEGER_VALUE T_SEMICOLON .

    $default  reduce using rule 5 (constant_declaration)


State 26

    8 variable_declaration: T_VAR T_IDENTIFIER T_COLON T_INTEGER . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 31


State 27

   12 statement: T_WRITELN T_LEFT_PARENTHESIS . T_IDENTIFIER T_RIGHT_PARENTHESIS T_SEMICOLON

    T_IDENTIFIER  shift, and go to state 32


State 28

   11 statement: T_IDENTIFIER T_ASSIGN . expression T_SEMICOLON

    T_MINUS             shift, and go to state 33
    T_LEFT_PARENTHESIS  shift, and go to state 34
    T_INTEGER_VALUE     shift, and go to state 35

    expression  go to state 36
    term        go to state 37
    factor      go to state 38
    scalar      go to state 39


State 29

    1 program: program_declaration constant_declaration_list variable_declaration_list T_BEGIN statement_list T_END . T_DOT

    T_DOT  shift, and go to state 40


State 30

   10 statement_list: statement_list statement .

    $default  reduce using rule 10 (statement_list)


State 31

    8 variable_declaration: T_VAR T_IDENTIFIER T_COLON T_INTEGER T_SEMICOLON .

    $default  reduce using rule 8 (variable_declaration)


State 32

   12 statement: T_WRITELN T_LEFT_PARENTHESIS T_IDENTIFIER . T_RIGHT_PARENTHESIS T_SEMICOLON

    T_RIGHT_PARENTHESIS  shift, and go to state 41


State 33

   22 factor: T_MINUS . factor

    T_MINUS             shift, and go to state 33
    T_LEFT_PARENTHESIS  shift, and go to state 34
    T_INTEGER_VALUE     shift, and go to state 35

    factor  go to state 42
    scalar  go to state 39


State 34

   21 factor: T_LEFT_PARENTHESIS . expression T_RIGHT_PARENTHESIS

    T_MINUS             shift, and go to state 33
    T_LEFT_PARENTHESIS  shift, and go to state 34
    T_INTEGER_VALUE     shift, and go to state 35

    expression  go to state 43
    term        go to state 37
    factor      go to state 38
    scalar      go to state 39


State 35

   24 scalar: T_INTEGER_VALUE .

    $default  reduce using rule 24 (scalar)


State 36

   11 statement: T_IDENTIFIER T_ASSIGN expression . T_SEMICOLON
   13 expression: expression . T_PLUS term
   14           | expression . T_MINUS term

    T_PLUS       shift, and go to state 44
    T_MINUS      shift, and go to state 45
    T_SEMICOLON  shift, and go to state 46


State 37

   15 expression: term .
   16 term: term . T_STAR factor
   17     | term . T_SLASH factor
   18     | term . T_DIV factor
   19     | term . T_MOD factor

    T_STAR   shift, and go to state 47
    T_SLASH  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MOD    shift, and go to state 50

    $default  reduce using rule 15 (expression)


State 38

   20 term: factor .

    $default  reduce using rule 20 (term)


State 39

   23 factor: scalar .

    $default  reduce using rule 23 (factor)


State 40

    1 program: program_declaration constant_declaration_list variable_declaration_list T_BEGIN statement_list T_END T_DOT .

    $default  reduce using rule 1 (program)


State 41

   12 statement: T_WRITELN T_LEFT_PARENTHESIS T_IDENTIFIER T_RIGHT_PARENTHESIS . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 51


State 42

   22 factor: T_MINUS factor .

    $default  reduce using rule 22 (factor)


State 43

   13 expression: expression . T_PLUS term
   14           | expression . T_MINUS term
   21 factor: T_LEFT_PARENTHESIS expression . T_RIGHT_PARENTHESIS

    T_PLUS               shift, and go to state 44
    T_MINUS              shift, and go to state 45
    T_RIGHT_PARENTHESIS  shift, and go to state 52


State 44

   13 expression: expression T_PLUS . term

    T_MINUS             shift, and go to state 33
    T_LEFT_PARENTHESIS  shift, and go to state 34
    T_INTEGER_VALUE     shift, and go to state 35

    term    go to state 53
    factor  go to state 38
    scalar  go to state 39


State 45

   14 expression: expression T_MINUS . term

    T_MINUS             shift, and go to state 33
    T_LEFT_PARENTHESIS  shift, and go to state 34
    T_INTEGER_VALUE     shift, and go to state 35

    term    go to state 54
    factor  go to state 38
    scalar  go to state 39


State 46

   11 statement: T_IDENTIFIER T_ASSIGN expression T_SEMICOLON .

    $default  reduce using rule 11 (statement)


State 47

   16 term: term T_STAR . factor

    T_MINUS             shift, and go to state 33
    T_LEFT_PARENTHESIS  shift, and go to state 34
    T_INTEGER_VALUE     shift, and go to state 35

    factor  go to state 55
    scalar  go to state 39


State 48

   17 term: term T_SLASH . factor

    T_MINUS             shift, and go to state 33
    T_LEFT_PARENTHESIS  shift, and go to state 34
    T_INTEGER_VALUE     shift, and go to state 35

    factor  go to state 56
    scalar  go to state 39


State 49

   18 term: term T_DIV . factor

    T_MINUS             shift, and go to state 33
    T_LEFT_PARENTHESIS  shift, and go to state 34
    T_INTEGER_VALUE     shift, and go to state 35

    factor  go to state 57
    scalar  go to state 39


State 50

   19 term: term T_MOD . factor

    T_MINUS             shift, and go to state 33
    T_LEFT_PARENTHESIS  shift, and go to state 34
    T_INTEGER_VALUE     shift, and go to state 35

    factor  go to state 58
    scalar  go to state 39


State 51

   12 statement: T_WRITELN T_LEFT_PARENTHESIS T_IDENTIFIER T_RIGHT_PARENTHESIS T_SEMICOLON .

    $default  reduce using rule 12 (statement)


State 52

   21 factor: T_LEFT_PARENTHESIS expression T_RIGHT_PARENTHESIS .

    $default  reduce using rule 21 (factor)


State 53

   13 expression: expression T_PLUS term .
   16 term: term . T_STAR factor
   17     | term . T_SLASH factor
   18     | term . T_DIV factor
   19     | term . T_MOD factor

    T_STAR   shift, and go to state 47
    T_SLASH  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MOD    shift, and go to state 50

    $default  reduce using rule 13 (expression)


State 54

   14 expression: expression T_MINUS term .
   16 term: term . T_STAR factor
   17     | term . T_SLASH factor
   18     | term . T_DIV factor
   19     | term . T_MOD factor

    T_STAR   shift, and go to state 47
    T_SLASH  shift, and go to state 48
    T_DIV    shift, and go to state 49
    T_MOD    shift, and go to state 50

    $default  reduce using rule 14 (expression)


State 55

   16 term: term T_STAR factor .

    $default  reduce using rule 16 (term)


State 56

   17 term: term T_SLASH factor .

    $default  reduce using rule 17 (term)


State 57

   18 term: term T_DIV factor .

    $default  reduce using rule 18 (term)


State 58

   19 term: term T_MOD factor .

    $default  reduce using rule 19 (term)
